# gpt

./: .env.example  .gitignore  AGENTS.md  README.md  SPEC.md  design-qa.md  package-lock.json  package.json
.github/workflows/: ci.yml
agent/: README.md  pyproject.toml
agent/ai_dev_agent/: cli.py  events.py  providers.py  runtime.py
agent/ai_dev_agent/tools/: __init__.py  contracts.py  git_tools.py  registry.py  shell_tools.py  test_tools.py
agent/prompts/: system.md
agent/tests/: test_events.py  test_runtime.py  test_tools.py
apps/desktop/: electron.vite.config.ts  index.html  package.json  tsconfig.node.json
apps/desktop/electron/: git.ts  github.ts  main.ts  preload.ts  taskStore.ts
apps/desktop/src/: App.tsx  global.d.ts  i18n.ts  main.tsx  styles.css  types.ts
apps/desktop/src/data/: seed.ts
apps/desktop/src/locales/: en.json  es.json  pt-BR.json  ru.json
docs/: ARCHITECTURE.md  FINAL_PRODUCT_PLAN.md  GITHUB_INTEGRATION.md  LOCALIZATION.md  RELEASE.md  SECURITY.md  TASKS.md  TECH_STACK.md
scripts/: check_i18n.mjs
