[project]
name = "ai-dev-agent"
version = "0.1.0"
description = "Local Python agent sidecar for AI Developer Desktop"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8.2",
  "typer>=0.12.3",
  "rich>=13.7.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.1",
  "ruff>=0.5.5"
]

[project.scripts]
ai-dev-agent = "ai_dev_agent.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_dev_agent*"]
exclude = ["prompts*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
